# Cyberorganism

./: .gitignore  .windsurfrules  Cargo.toml  LICENSE  README.md  build-plugin.sh  config.toml.example  dev.sh  install-plugin.sh  package-lock.json  server.sh  test-server-connection.js
src/: commands.rs  config.rs  cyberorganism_control_flow.txt  debug.rs  display_container.rs  keyhandler.rs  main.rs  rendering.rs  system_architecture.txt  taskstore.rs  ui.rs
src/genius_platform/: genius_api.rs  genius_api_bridge.rs  genius_keyhandler.rs  mod.rs
src/gui/: genius_feed.rs  keyhandler.rs  mod.rs  rendering.rs
src/plugin/: index.html  index.js  manifest.json  package-lock.json  package.json  style.css  webpack.config.js
src/server/: main.rs
src/tui/: keyhandler.rs  mod.rs  rendering.rs
tui/: commands.rs  main.rs  ui.rs
