[package]
name = "cyberorganism"
version = "0.1.0"
edition = "2024"

# We'll set up workspace configuration later when moving TUI code

# Shared dependencies used by both the TUI and the new implementation
[dependencies]
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3.7"    # Fuzzy text matching
regex = "1.11.1"

# TUI-specific dependencies (will be moved to tui crate later)
ratatui = { version = "0.25.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.27.0"
device_query = "1.1.3"
unicode-segmentation = "1.10.1"
tui-input = "0.8.0"

# New dependencies for the Logseq plugin backend
tokio = { version = "1.36.0", features = ["full"], optional = true }
axum = { version = "0.7.4", features = ["ws"], optional = true }
tower-http = { version = "0.5.1", features = ["cors"], optional = true }
portable-pty = { version = "0.8.1", optional = true }
wasm-bindgen = { version = "0.2.91", optional = true }
env_logger = { version = "0.11.2", optional = true }
log = { version = "0.4.20", optional = true }
futures = { version = "0.3.30", optional = true }

[features]
default = ["server"]
tui = []
server = ["tokio", "axum", "tower-http", "portable-pty", "env_logger", "log", "futures"]
wasm = ["wasm-bindgen"]

[dev-dependencies]
tempfile = "3.10.0"    # Temporary file handling for tests

# Define multiple binaries
[[bin]]
name = "tui"
path = "tui/main.rs"
required-features = ["tui"]

[[bin]]
name = "server"
path = "src/server/main.rs"
required-features = ["server"]
