[package]
name = "cyberorganism"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []           # No features enabled by default
mock-api = []          # Feature flag for using mock API data exclusively
real-api = []           # Feature flag for using real API data

[dependencies]
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3.7"    # Fuzzy text matching
regex = "1.11.1"

# Configuration and environment
config = "0.13"        # Configuration management
directories = "5.0"    # Find platform-specific directories

# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# TUI dependencies (kept for reference)
ratatui = { version = "0.25.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.27.0"
device_query = "1.1.3"
unicode-segmentation = "1.10.1"
tui-input = "0.8.0"

# GUI dependencies
egui = "0.26.2"
eframe = "0.26.2"  # egui framework
lazy_static = "1.4.0"  # For singleton pattern

[dev-dependencies]
tempfile = "3.10.0"    # Temporary file handling for tests
